# Redukcia-hluku

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/Research/: python practice.py
app/src/androidTest/java/com/example/noisecancellation/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  voicefilter.cpp
app/src/main/java/com/example/noisecancellation/: MainActivity.java  VoiceFilter.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/noisecancellation/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
